# eCobidas

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  .remarkrc  .travis.yml  .tributors  404.html  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  OHBM_hackathon_2019_project_description.md  README.md  contributions.md  contributors.md  download_csv.sh  download_subsheet_tsv.sh  download_tsv.sh  download_tsv_artemis.sh  environment.yml  general_organization.md  goals.md  how_to_render_the_checklist.md  index.html  local_server.py  mkdocs.yml  mlc_config.json  npm-requirements.txt  personasAndPathways.md  personas_and_pathways.md  pyproject.toml  requirements.txt  sitemap.xml  spreadsheet_content.md  (+8 more)
ui/: .gitignore  .pre-commit-config.yaml  README.md  app.py  forms.py  modules.py  pyproject.toml  requirements.txt  tox.ini
ui/ecobidas_ui/: __init__.py  about.py  app.py  auth.py  db.py  extensions.py  forms.py  modules.py  protocol.py  settings.py  utils.py
ui/ecobidas_ui/auth/: views.py
ui/ecobidas_ui/generate/: __init__.py  views.py
ui/ecobidas_ui/initializers/: assets.py
ui/ecobidas_ui/protocols/: forms.py  utils.py  views.py
ui/ecobidas_ui/public/: views.py
ui/ecobidas_ui/static/css/: font-awesome.min.css
ui/ecobidas_ui/static/json/: faq.json
ui/ecobidas_ui/templates/: 401.html  404.html  405.html  500.html  about.html  base.html  extra_forms.html  index.html  protocol.html  side_nav.html
ui/ecobidas_ui/templates/auth/: login.html  register.html
ui/ecobidas_ui/templates/generate/: device_info.html  device_info.jinja  index.html  institution.html  institution.jinja  report.html  task_name.html  task_name.jinja
ui/ecobidas_ui/templates/generate/meeg/: device_channel_count.tmp  device_channels.tmp  device_freq_config.tmp  dewar_positioning.tmp  eeg_channel_placement.tmp  eeg_report.tmp  head_coil_frequency.tmp  head_localisation.tmp  meg_report.tmp  recording_properties.tmp
ui/ecobidas_ui/templates/layout/: base.html  footer.html  nav.html  svg.html
ui/ecobidas_ui/templates/public/: about.html  faq.html  index.html
ui/neurovault/: README_eCOBIDAS-en.html
ui/neurovault/activities/experimental_design/: experimental_design_schema.jsonld
ui/neurovault/activities/experimental_design/items/: length_of_blocks.jsonld  length_of_runs.jsonld  length_of_trials.jsonld  number_of_experimental_units.jsonld  number_of_imaging_runs.jsonld  optimization.jsonld  optimization_method.jsonld  type_of_design.jsonld
ui/neurovault/activities/group_inference/: group_inference_schema.jsonld
ui/neurovault/activities/group_inference/items/: group_smoothness_fwhm.jsonld  group_statistic_parameters.jsonld  group_statistic_type.jsonld
ui/neurovault/activities/group_modeling/: group_modeling_schema.jsonld
ui/neurovault/activities/group_modeling/items/: group_estimation_type.jsonld  group_inference_type.jsonld  group_model_multilevel.jsonld  group_model_type.jsonld  group_modeling_software.jsonld  group_repeated_measures.jsonld  group_repeated_measures_method.jsonld
ui/neurovault/activities/individual_subject_modeling/: individual_subject_modeling_schema.jsonld
ui/neurovault/activities/individual_subject_modeling/items/: autocorrelation_model.jsonld  contrast_definition.jsonld  contrast_definition_cogatlas.jsonld  hemodynamic_response_function.jsonld  high_pass_filter_method.jsonld  intrasubject_estimation_type.jsonld  intrasubject_model_type.jsonld  intrasubject_modeling_software.jsonld  orthogonalization_description.jsonld  used_dispersion_derivatives.jsonld  used_high_pass_filter.jsonld  used_motion_regressors.jsonld  used_orthogonalization.jsonld  used_reaction_time_regressor.jsonld  used_temporal_derivatives.jsonld
ui/neurovault/activities/intersubject_registration/: intersubject_registration_schema.jsonld
ui/neurovault/activities/intersubject_registration/items/: coordinate_space.jsonld  functional_coregistered_to_structural.jsonld  functional_coregistration_method.jsonld  interpolation_method.jsonld  intersubject_registration_software.jsonld  intersubject_transformation_type.jsonld  nonlinear_transform_type.jsonld  object_image_type.jsonld  resampled_voxel_size.jsonld  smoothing_fwhm.jsonld  smoothing_type.jsonld  target_resolution.jsonld  target_template_image.jsonld  transform_similarity_metric.jsonld  used_intersubject_registration.jsonld  used_smoothing.jsonld
ui/neurovault/activities/mri_acquisition/: mri_acquisition_schema.jsonld
ui/neurovault/activities/mri_acquisition/items/: EchoTime.jsonld  FlipAngle.jsonld  MagneticFieldStrength.jsonld  Manufacturer.jsonld  ManufacturersModelName.jsonld  PulseSequenceType.jsonld  RepetitionTime.jsonld  SliceTiming.jsonld  acquisition_orientation.jsonld  field_of_view.jsonld  matrix_size.jsonld  parallel_imaging.jsonld  skip_factor.jsonld  slice_thickness.jsonld
ui/neurovault/activities/participants/: participants_schema.jsonld
ui/neurovault/activities/participants/items/: group_comparison.jsonld  group_description.jsonld  handedness.jsonld  inclusion_exclusion_criteria.jsonld  number_of_rejected_subjects.jsonld  number_of_subjects.jsonld  proportion_male_subjects.jsonld  subject_age_max.jsonld  subject_age_mean.jsonld  subject_age_min.jsonld
ui/neurovault/activities/preprocessing/: preprocessing_schema.jsonld
ui/neurovault/activities/preprocessing/items/: SoftwareName.jsonld  SoftwareVersion.jsonld  b0_unwarping_software.jsonld  motion_correction_interpolation.jsonld  motion_correction_metric.jsonld  motion_correction_reference.jsonld  motion_correction_software.jsonld  order_of_preprocessing_operations.jsonld  quality_control.jsonld  slice_timing_correction_software.jsonld  (+4 more)
ui/neurovault/protocols/: neurovault_schema.jsonld
ui/static/: style.css
ui/templates/: 404.html  500.html  about.html  activity.html  base.html  index.html  protocol.html
ui/tests/: conftest.py  test_app.py  test_utils.py
ui/tests/protocols/: conftest.py  test_forms.py  test_utils.py
ui/tmp/: participants.json
(+4126 files in other folders)
