[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Remi Gau"}]
dependencies = [
    "flask",
    "Flask-WTF",
    "bootstrap-flask",
    "pandas",
    "rich",
    "requests"
]
description = "UI for eCOBIDAS"
license = {text = "GPL 3.0"}
maintainers = [{name = "Remi Gau", email = "remi.gau2@mcgill.ca"}]
name = "ecobidas_ui"
readme = "README.md"
requires-python = ">=3.11"
# Version from setuptools_scm
# dynamic = ["version"]
version = "0.1.0"

[project.optional-dependencies]
dev = [
    'tox'
]
test = [
    "coverage",
    "pytest>=6.0.0",
    "pytest-cov"
]

[tool.black]
line-length = 100

[tool.codespell]
# ignore-words-list = ""
skip = "./.git,*.svg,env,"

[tool.hatch.build.hooks.vcs]
version-file = "ecobidas_ui/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ecobidas_ui"]

[tool.hatch.version]
source = "vcs"

[tool.isort]
combine_as_imports = true
line_length = 100
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr"]  # "truthy-bool"
no_implicit_optional = true
show_error_codes = true
# strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "rich"
]

[[tool.mypy.overrides]]
ignore_errors = true
module = ['tests.*']

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --doctest-modules --showlocals -s -v"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
minversion = "6.0"
xfail_strict = true
